cloudtsa/config/podswithenvoy.yaml
##########################################################################################################
#                                                 Cache Generator                                                #
##########################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: svcwithenvoy
  labels:
    app: svcwithenvoy
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: svcwithenvoy
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: svcwithenvoy-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: svcwithenvoy
        version: v1
    spec:
      containers:
      - name: svcwithenvoy
        image: iter8/serviceunit:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-istio-autogenerated-k8s-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
---
