cloudtsa/config/apipath.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svc0-vs
  namespace: default
spec:
  gateways:
  - gateway-istio-autogenerated-k8s-ingress
  hosts:
  - svc0
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: svc0.default.svc.cluster.local
        port:
          number: 8080
    timeout: 20s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svc1-vs
  namespace: default
spec:
  gateways:
  - gateway-istio-autogenerated-k8s-ingress
  hosts:
  - svc1
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: svc1.default.svc.cluster.local
        port:
          number: 8080
    timeout: 20s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svc2-vs
  namespace: default
spec:
  gateways:
  - gateway-istio-autogenerated-k8s-ingress
  hosts:
  - svc2
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: svc2.default.svc.cluster.local
        port:
          number: 8080
    timeout: 20s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svc3-vs
  namespace: default
spec:
  gateways:
  - gateway-istio-autogenerated-k8s-ingress
  hosts:
  - svc3
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: svc3.default.svc.cluster.local
        port:
          number: 8080
    timeout: 20s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svcwithenvoy-vs
  namespace: default
spec:
  gateways:
  - gateway-istio-autogenerated-k8s-ingress
  hosts:
  - svcwithenvoy
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: svcwithenvoy.default.svc.cluster.local
        port:
          number: 8080
